--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/5e5b421f29.js" crossorigin="anonymous"></script>
     <title>Reverse Engineered Website</title>
 </head>
 <body>
@@ -14,16 +15,65 @@
                     <a href="#">Foundation Framework</a>
                 </div>
                 <div class="links-wrap">
-                    <div class="dropdown" data-dropdown>
+                    <div class="dropdown">
                         <a href="#">Showcase</a>
-                    <div class="dropdown-menu" data-dropdown-button>
-                        Dropdown Content
+                    <div class="dropdown-menu">
+                        <ul class="dropdown-contents">
+                            <li>Brands</li>
+                            <li>Case Studies</li>
+                            <li>Blog</li>
+                            <li>Buzz</li>
+                            <li>About Foundation</li>
+                        </ul>
                     </div>
                     </div>
+                    <div class="dropdown">
                     <a href="#">Develop</a>
+                    <div class="dropdown-menu">
+                        <ul>
+                            <li class="solo-link">Frameworks</li>
+                            <li>Foundation for Sites</li>
+                            <li>Foundation for Email</li>
+                            <li class="solo-link">Develop</li>
+                            <li>HTML Templates</li>
+                            <li>Resources</li>
+                            <li>Building Blocks</li>
+                        </ul>
+                    </div>
+                    </div>
+                    <div class="dropdown">
                     <a href="#">Tutorials</a>
+                    <div class="dropdown-menu">
+                        <ul>
+                            <li>Tutorials</li>
+                            <li>Certification</li>
+                        </ul>
+                    </div>
+                     </div>
+                     <div class="dropdown">
                     <a href="#">Get Involved</a>
+                    <div class="dropdown-menu">
+                        <ul>
+                            <li>Connect</li>
+                            <li>Foundation Forum</li>
+                            <li>Events</li>
+                            <li>FAQs</li>
+                            <li>Contribute</li>
+                            <li>Yetinauts</li>
+                            <li>Partners</li>
+                            <li>Sponserships</li>
+                        </ul>
+                    </div>
+                    </div>
+                    <div class="dropdown">
                     <a href="#">Docs</a>
+                    <div class="dropdown-menu">
+                        <ul>
+                            <li>Sites Docs</li>
+                            <li>Emails Docs</li>
+                        </ul>
+                    </div>
+                    </div>
                     <a href="#" class="last-link">Getting Started</a>
                 </div> 
         </nav>
@@ -32,9 +82,13 @@
             <p class="p1">Foundation for Sites</p>
             <p class="p2">6.7.5  <span>changelog</span></p>
         </div>
-        <input type="text" class="icon" placeholder="Find a page, component, variable, mixin, function...">
+        <i class="fa-sharp fa-solid fa-magnifying-glass fa-flip-horizontal magnify"></i>
+        <input type="text" placeholder="Find a page, component, variable, mixin, function...">
         <div class="top-right">
-            <button class="button1" type="button" >Star</button>
+            <button class="button1" type="button">
+                <i class="fa-brands fa-github"></i>
+                Star
+            </button>
         </div>
     </div>
     </header>
@@ -834,11 +888,6 @@
               <div class="foundation-toc-ad-unit" id="TOCAdUnit"><div class="ad-unit"><h3 class="ad-unit-title">Master Button</h3><p class="ad-unit-text">Get up to speed FAST, learn straight from the experts who built Foundation.</p><a class="button ad-unit-button" href="https://zurb.com/university/foundation-intro?utm_source=Foundation%20Docs&amp;utm_medium=Docs&amp;utm_content=Struggling&amp;utm_campaign=Docs%20To%20Intro">Learn More</a></div></div>
             </div>
         </div>
-        <footer class="footer">
-            <div class="bottom-left"></div>
-            <div class="bottom-middle"></div>
-            <div class="bottom-left"></div>
-        </footer>
     </main>
     <script src="script.js"></script>
 </body>
